flex/flex-tests/testData/js2_highlighting/NoImportFunction.js2
package {
	public class NoImportFunction
	{
		public function ImportFunction()
		{
			var x:Object
            x.f<caret>oo
		}
	}
}

<error descr="Package should be first statement in file">package</error> {
  class <error descr="Class 'Bar' should be defined in file 'Bar.js2'">Bar</error> {
      function foo() {}
  }
}